product-service/kind-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  labels:
    app: product
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /product
        backend:
          service:
            name: product-svc
            port:
              number: 8080
  defaultBackend:
    service:
      name: product-svc
      port:
        number: 8080
